enhance authentication: improve admin login process with detailed logging and error handling